welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: ';' expected but 'if' found.
			} if (getDirection() == Direction.EST){
                          ^SnakeBuggle:18: error: Unmatched closing brace '}' ignored here
			}
                        ^SnakeBuggle:22: error: expected start of definition
override def run() {
         ^SnakeBuggle:30: error: Unmatched closing brace '}' ignored here
}
^