welcome.lessons.welcome.traversal.Snake.scala.code
def positionFinale():Boolean = {
		if ((estFaceMur()) && (getDirection() == Direction.EST)){
			gauche()
			if (estFaceMur()){
				return true
			} if (getDirection() == Direction.EST){
				droite()
				gauche()
				avance()
				gauche() 
			} if (getDirection() == Direction.OUEST){
				droite()
				avance()
				droite()	
			}
		}
			}
		}
		return false 
}		
override def run() {
baisseBrosse()
	while (positionFinale() == false){
				avance()
  	}
}
